examples/test/testpolicy18350.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18350
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key0: value10
      key15: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value17
          key41: value44
          key21: value46
      podSelector:
        matchLabels:
          key13: value16
          key4: value20
